--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -80,8 +80,7 @@ jobs:
             -w /opt/ida $IMAGE_URL \
             tail -f /dev/null
           
-          echo 'docker exec idap ./idat -B -L"/dev/stdout" /home/workspace/$BINARY_NAME | tee /home/workspace/output.log'
-          docker exec idap ./idat -B -L"/dev/stdout" ./picture_decoder | tee /home/workspace/output.log
+          docker exec idap ./idat -B -L"/dev/stdout" ./picture_decoder | tee /home/runner/workspace/output.log
 
           echo "Finished"
           sudo chmod -R 777 /home/runner/workspace 
